<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:background="@color/black"
    tools:context=".view.fragments.HomeFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/green_gradient">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/are_you_ready_for_exams"
                android:textSize="20sp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_days"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:layout_marginTop="12dp"
                app:cardCornerRadius="2dp"
                app:cardBackgroundColor="#40346356"
                app:layout_constraintEnd_toStartOf="@+id/textView3"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">
                <TextView
                    android:id="@+id/tv_days"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/days_09"
                    android:textSize="25sp"
                    android:textColor="@color/white"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_hours"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center"
                app:cardCornerRadius="2dp"
                app:cardBackgroundColor="#40346356"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintEnd_toStartOf="@+id/textView4"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/textView3">
                <TextView
                    android:id="@+id/tv_hours"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/hours_23"
                    android:textSize="25sp"
                    android:textColor="@color/white"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_minutes"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center"
                app:cardCornerRadius="2dp"
                app:cardBackgroundColor="#40346356"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="@+id/textView3">
                <TextView
                    android:id="@+id/tv_minutes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/minutes_59"
                    android:textSize="25sp"
                    android:textColor="@color/white"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:gravity="center"
                android:text="@string/twin_dots"
                android:textSize="25sp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/cardView_days"
                app:layout_constraintEnd_toStartOf="@+id/cardView_hours"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cardView_days"
                app:layout_constraintTop_toTopOf="@+id/cardView_days" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:gravity="center"
                android:text="@string/twin_dots"
                android:textSize="25sp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/cardView_days"
                app:layout_constraintEnd_toStartOf="@+id/cardView_minutes"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cardView_hours"
                app:layout_constraintTop_toTopOf="@+id/cardView_days" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/days"
                android:textSize="16sp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/cardView_days"
                app:layout_constraintStart_toStartOf="@+id/cardView_days"
                app:layout_constraintTop_toBottomOf="@+id/cardView_days" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/hours"
                android:textSize="16sp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/cardView_hours"
                app:layout_constraintStart_toStartOf="@+id/cardView_hours"
                app:layout_constraintTop_toBottomOf="@+id/cardView_days" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/minutes"
                android:textSize="16sp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/cardView_minutes"
                app:layout_constraintStart_toStartOf="@+id/cardView_minutes"
                app:layout_constraintTop_toBottomOf="@+id/cardView_days" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/classes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/classes"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/tv_classes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        android:text="@string/classes_today_6"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/classes"
        app:layout_constraintEnd_toStartOf="@+id/classes_today"
        app:layout_constraintTop_toTopOf="@+id/classes"/>

    <TextView
        android:id="@+id/classes_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/classes_today"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/classes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/classes" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_classes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        tools:listitem="@layout/item_classes"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_classes" />

    <TextView
        android:id="@+id/homeworks"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/homeworks"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_classes" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_homework"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        tools:listitem="@layout/item_homework"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeworks"/>

</androidx.constraintlayout.widget.ConstraintLayout>
